--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build-backend": "BABEL_ENV=server babel server -d distServer && cp -R server/templates distServer/templates",
     "copy-files": "cp -R src/assets dist",
 	"heroku-prebuild": "mkdir distServer && rm -r distServer",
-	"heroku-postbuild": "npm build-backend"
+	"heroku-postbuild": "npm run build-backend"
   },
   "repository": {
     "type": "git",
