--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "webpack:prod": "BABEL_ENV=development NODE_ENV=production webpack --display-modules --progress",
     "webpack:stats": "webpack --json > stats.json",
     "build": "npm run webpack:prod && npm run copy-files",
-    "build-backend": "BABEL_ENV=server babel server -d distServer && cp -R server/templates distServer/templates",
+    "build-backend": "BABEL_ENV=server babel server -d distServer",
     "copy-files": "cp -R src/assets dist",
 	"heroku-prebuild": "mkdir distServer && rm -r distServer",
 	"heroku-postbuild": "npm run build-backend"
