--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "concurrently \"npm run backend\" \"npm run webpack\"",
     "schema": "get-graphql-schema http://localhost:8080/graphql > schema.json",
     "backend": "npm run build-backend && node distServer/",
-    "backend:watch": "BABEL_DISABLE_CACHE=1 BABEL_ENV=server NODE_ENV=development babel-watch --watch server/ --exclude server/tmp server/index.js",
+    "backend:watch": "BABEL_DISABLE_CACHE=1 BABEL_ENV=server NODE_ENV=development babel-watch --watch server/ server/index.js",
     "webpack": "NODE_ENV=development webpack-dev-server --open --hot",
     "webpack:dev": "NODE_ENV=development webpack --display-modules --progress",
     "webpack:prod": "BABEL_ENV=development NODE_ENV=production webpack --display-modules --progress",
