--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "angular-chartist.js": "^4.2.1",
     "angular-cookies": "^1.6.2",
     "angular-datatables": "^2.1.0",
+    "angular-file-saver": "^1.1.3",
     "angular-gantt": "^1.2.14",
     "angular-google-maps": "^2.4.0",
     "angular-jwt": "^0.1.7",
@@ -107,6 +108,7 @@
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "perfect-scrollbar": "^0.6.13",
+    "python-shell": "^0.4.0",
     "redux": "^3.6.0",
     "redux-persist": "^4.0.0-alpha7",
     "redux-thunk": "^2.1.0",
