--- a/package.json
+++ b/package.json
@@ -97,7 +97,6 @@
     "mobile-detect": "^1.3.3",
     "moment": "^2.15.2",
     "moment-range": "^3.0.3",
-    "mongoose": "^4.7.6",
     "ng-redux": "^3.4.0-beta.1",
     "ngclipboard": "^1.1.1",
     "node-schedule": "^1.2.1",
@@ -114,9 +113,11 @@
     "redux-persist": "^4.0.0-alpha7",
     "redux-thunk": "^2.1.0",
     "request-promise": "^4.1.1",
+    "sequelize": "^4.3.2",
     "serve-favicon": "^2.3.2",
     "showdown": "^1.5.3",
     "sortablejs": "^1.5.0-rc1",
+    "sqlite": "^2.8.0",
     "textangular": "^1.5.12",
     "winston": "^2.3.0",
     "winston-daily-rotate-file": "^1.4.0"
