--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
 		"apollo-client": "^1.0.1",
 		"body-parser": "^1.15.2",
 		"c3-angular": "^1.3.1",
+		"camo": "^0.12.3",
 		"chartist": "^0.10.1",
 		"clipboard": "^1.5.16",
 		"compression": "^1.6.2",
@@ -97,7 +98,7 @@
 		"mobile-detect": "^1.3.3",
 		"moment": "^2.15.2",
 		"moment-range": "^3.0.3",
-		"mongoose": "^4.7.6",
+		"nedb": "^1.8.0",
 		"ng-redux": "^3.4.0-beta.1",
 		"ngclipboard": "^1.1.1",
 		"node-schedule": "^1.2.1",
@@ -127,6 +128,7 @@
 		"babel-loader": "^6.2.5",
 		"babel-plugin-angularjs-annotate": "^0.7.0",
 		"babel-plugin-inline-import": "^2.0.4",
+		"babel-preset-camo": "0.0.1",
 		"babel-preset-es2015": "^6.22.0",
 		"babel-watch": "^2.0.6",
 		"browser-sync": "^2.17.5",
