Moved filesaver to core.config

--- a/package.json
+++ b/package.json
@@ -1,172 +1,172 @@
 {
-  "name": "ques",
-  "version": "0.3.4",
-  "private": true,
-  "description": "Learning platform for pre-clinical students",
-  "main": "app.js",
-  "scripts": {
-    "start": "concurrently \"npm run backend\" \"npm run webpack\"",
-    "schema": "get-graphql-schema http://localhost:8080/graphql > schema.json",
-    "backend": "npm run build-backend && node distServer/",
-    "backend:watch": "BABEL_DISABLE_CACHE=1 BABEL_ENV=server NODE_ENV=development babel-watch --watch server/ server/index.js",
-    "webpack": "NODE_ENV=development webpack-dev-server --open --hot",
-    "webpack:dev": "NODE_ENV=development webpack --display-modules --progress",
-    "webpack:prod": "BABEL_ENV=development NODE_ENV=production webpack --display-modules --progress",
-    "webpack:stats": "webpack --json > stats.json",
-    "build": "npm run webpack:prod && npm run copy-files",
-    "build-backend": "BABEL_ENV=server babel server -d distServer",
-    "copy-files": "cp -R src/assets dist",
-    "heroku-prebuild": "mkdir distServer && rm -r distServer",
-    "heroku-postbuild": "npm run build && npm run build-backend"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Darkbladecr/ques.git"
-  },
-  "author": "Stefan Mitrasinovic",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Darkbladecr/ques/issues"
-  },
-  "homepage": "https://github.com/Darkbladecr/ques#readme",
-  "dependencies": {
-    "@flowjs/flow.js": "^2.11.2",
-    "@flowjs/ng-flow": "^2.7.1",
-    "angular": "^1.6.2",
-    "angular-animate": "^1.6.2",
-    "angular-aria": "^1.6.2",
-    "angular-chart.js": "^1.0.3",
-    "angular-chartist.js": "^4.2.1",
-    "angular-cookies": "^1.6.2",
-    "angular-datatables": "^2.1.0",
-    "angular-file-saver": "^1.1.3",
-    "angular-gantt": "^1.2.14",
-    "angular-google-maps": "^2.4.0",
-    "angular-jwt": "^0.1.7",
-    "angular-material": "^1.1.3",
-    "angular-material-data-table": "^0.10.9",
-    "angular-messages": "^1.6.2",
-    "angular-moment-picker": "^0.9.7",
-    "angular-native-dragdrop": "^1.2.2",
-    "angular-nvd3": "^1.0.9",
-    "angular-resource": "^1.6.2",
-    "angular-sanitize": "^1.6.2",
-    "angular-scroll": "^1.0.0",
-    "angular-timer": "^1.3.3",
-    "angular-translate": "^2.13.0",
-    "angular-translate-loader-partial": "^2.13.0",
-    "angular-ui-calendar": "^1.0.2",
-    "angular-ui-router": "^0.4.2",
-    "angular-ui-sortable": "^0.16.1",
-    "angular-ui-tree": "^2.22.1",
-    "angular-xeditable": "^0.6.0",
-    "angular1-apollo": "^0.2.1",
-    "angulartics": "^1.4.0",
-    "angulartics-google-analytics": "^0.4.0",
-    "animate.css": "^3.5.2",
-    "apollo-client": "^1.0.1",
-    "body-parser": "^1.15.2",
-    "c3-angular": "^1.3.1",
-    "chartist": "^0.10.1",
-    "clipboard": "^1.5.16",
-    "compression": "^1.6.2",
-    "css-element-queries": "^0.4.0",
-    "d3": "3.5.17",
-    "datatables-responsive": "^1.0.7",
-    "ejs": "^2.5.5",
-    "email-templates": "^2.5.4",
-    "express": "^4.14.0",
-    "express-jwt": "^5.1.0",
-    "font-awesome": "^4.7.0",
-    "graphql": "^0.9.1",
-    "graphql-server-express": "^0.6.0",
-    "graphql-tools": "^0.10.0",
-    "highlightjs": "^9.8.0",
-    "imagesloaded": "^4.1.1",
-    "jade": "^1.11.0",
-    "jquery": "^3.1.1",
-    "jquery-ui-touch-punch": "^0.2.3",
-    "jsonwebtoken": "^7.1.9",
-    "jsplumb": "^2.2.4",
-    "jwt-decode": "^2.1.0",
-    "lightgallery.js": "^1.0.1",
-    "localforage": "^1.4.3",
-    "lodash": "^4.17.2",
-    "logrocket": "^0.2.1",
-    "mathjs": "^3.10.0",
-    "mobile-detect": "^1.3.3",
-    "moment": "^2.15.2",
-    "moment-range": "^3.0.3",
-    "mongoose": "^4.7.6",
-    "ng-redux": "^3.4.0-beta.1",
-    "ngclipboard": "^1.1.1",
-    "node-schedule": "^1.2.1",
-    "nodemailer": "^3.1.4",
-    "nodemailer-mailgun-transport": "^1.2.2",
-    "nvd3": "^1.8.4",
-    "optics-agent": "^1.1.2",
-    "papaparse": "^4.3.3",
-    "passport": "^0.3.2",
-    "passport-local": "^1.0.0",
-    "perfect-scrollbar": "^0.6.13",
-    "python-shell": "^0.4.0",
-    "redux": "^3.6.0",
-    "redux-persist": "^4.0.0-alpha7",
-    "redux-thunk": "^2.1.0",
-    "request-promise": "^4.1.1",
-    "serve-favicon": "^2.3.2",
-    "showdown": "^1.5.3",
-    "sortablejs": "^1.5.0-rc1",
-    "textangular": "^1.5.12",
-    "winston": "^2.3.0",
-    "winston-daily-rotate-file": "^1.4.0"
-  },
-  "devDependencies": {
-    "babel-cli": "^6.23.0",
-    "babel-core": "^6.17.0",
-    "babel-loader": "^6.2.5",
-    "babel-plugin-angularjs-annotate": "^0.7.0",
-    "babel-plugin-inline-import": "^2.0.4",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-watch": "^2.0.6",
-    "browser-sync": "^2.17.5",
-    "casual": "^1.5.6",
-    "concurrently": "^3.1.0",
-    "connect-history-api-fallback": "^1.3.0",
-    "css-loader": "^0.26.1",
-    "del": "^2.0.2",
-    "ejs-compiled-loader": "^1.1.0",
-    "eslint": "^3.10.2",
-    "eslint-plugin-graphql": "^0.6.1",
-    "estraverse": "^4.1.1",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "favicons-webpack-plugin": "^0.0.7",
-    "file-loader": "^0.10.1",
-    "fmt-obj": "^1.3.0",
-    "graphql-document-collector": "^0.1.1",
-    "graphql-tag": "^2.4.2",
-    "html-loader": "^0.4.5",
-    "html-minify-loader": "^1.1.0",
-    "html-webpack-plugin": "^2.28.0",
-    "http-proxy-middleware": "^0.17.3",
-    "json-loader": "^0.5.4",
-    "node-sass": "^4.5.0",
-    "nodemon": "^1.11.0",
-    "proxy-middleware": "^0.15.0",
-    "react-apollo": "^0.13.1",
-    "run-sequence": "^1.2.2",
-    "sass-loader": "^6.0.2",
-    "style-loader": "^0.13.2",
-    "to-markdown": "^3.0.4",
-    "url": "^0.11.0",
-    "url-loader": "^0.5.7",
-    "webpack": "^2.2.1",
-    "webpack-dev-middleware": "^1.10.1",
-    "webpack-dev-server": "^2.4.1",
-    "webpack-hot-middleware": "^2.17.1",
-    "webpack-visualizer-plugin": "^0.1.11"
-  },
-  "engines": {
-    "node": ">=0.10.0"
-  }
+	"name": "ques",
+	"version": "0.3.4",
+	"private": true,
+	"description": "Learning platform for pre-clinical students",
+	"main": "app.js",
+	"scripts": {
+		"start": "concurrently \"npm run backend\" \"npm run webpack\"",
+		"schema": "get-graphql-schema http://localhost:8080/graphql > schema.json",
+		"backend": "npm run build-backend && node distServer/",
+		"backend:watch": "BABEL_DISABLE_CACHE=1 BABEL_ENV=server NODE_ENV=development babel-watch --watch server/ server/index.js",
+		"webpack": "BABEL_ENV=development NODE_ENV=development webpack-dev-server --open --hot",
+		"webpack:dev": "BABEL_ENV=development NODE_ENV=development webpack --display-modules --progress",
+		"webpack:prod": "BABEL_ENV=development NODE_ENV=production webpack --display-modules --progress",
+		"webpack:stats": "webpack --json > stats.json",
+		"build": "npm run webpack:prod && npm run copy-files",
+		"build-backend": "BABEL_ENV=server babel server -d distServer",
+		"copy-files": "cp -R src/assets dist",
+		"heroku-prebuild": "mkdir distServer && rm -r distServer",
+		"heroku-postbuild": "npm run build && npm run build-backend"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/Darkbladecr/ques.git"
+	},
+	"author": "Stefan Mitrasinovic",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/Darkbladecr/ques/issues"
+	},
+	"homepage": "https://github.com/Darkbladecr/ques#readme",
+	"dependencies": {
+		"@flowjs/flow.js": "^2.11.2",
+		"@flowjs/ng-flow": "^2.7.1",
+		"angular": "^1.6.2",
+		"angular-animate": "^1.6.2",
+		"angular-aria": "^1.6.2",
+		"angular-chart.js": "^1.0.3",
+		"angular-chartist.js": "^4.2.1",
+		"angular-cookies": "^1.6.2",
+		"angular-datatables": "^2.1.0",
+		"angular-file-saver": "^1.1.3",
+		"angular-gantt": "^1.2.14",
+		"angular-google-maps": "^2.4.0",
+		"angular-jwt": "^0.1.7",
+		"angular-material": "^1.1.3",
+		"angular-material-data-table": "^0.10.9",
+		"angular-messages": "^1.6.2",
+		"angular-moment-picker": "^0.9.7",
+		"angular-native-dragdrop": "^1.2.2",
+		"angular-nvd3": "^1.0.9",
+		"angular-resource": "^1.6.2",
+		"angular-sanitize": "^1.6.2",
+		"angular-scroll": "^1.0.0",
+		"angular-timer": "^1.3.3",
+		"angular-translate": "^2.13.0",
+		"angular-translate-loader-partial": "^2.13.0",
+		"angular-ui-calendar": "^1.0.2",
+		"angular-ui-router": "^0.4.2",
+		"angular-ui-sortable": "^0.16.1",
+		"angular-ui-tree": "^2.22.1",
+		"angular-xeditable": "^0.6.0",
+		"angular1-apollo": "^0.2.1",
+		"angulartics": "^1.4.0",
+		"angulartics-google-analytics": "^0.4.0",
+		"animate.css": "^3.5.2",
+		"apollo-client": "^1.0.1",
+		"body-parser": "^1.15.2",
+		"c3-angular": "^1.3.1",
+		"chartist": "^0.10.1",
+		"clipboard": "^1.5.16",
+		"compression": "^1.6.2",
+		"css-element-queries": "^0.4.0",
+		"d3": "3.5.17",
+		"datatables-responsive": "^1.0.7",
+		"ejs": "^2.5.5",
+		"email-templates": "^2.5.4",
+		"express": "^4.14.0",
+		"express-jwt": "^5.1.0",
+		"font-awesome": "^4.7.0",
+		"graphql": "^0.9.1",
+		"graphql-server-express": "^0.6.0",
+		"graphql-tools": "^0.10.0",
+		"highlightjs": "^9.8.0",
+		"imagesloaded": "^4.1.1",
+		"jade": "^1.11.0",
+		"jquery": "^3.1.1",
+		"jquery-ui-touch-punch": "^0.2.3",
+		"jsonwebtoken": "^7.1.9",
+		"jsplumb": "^2.2.4",
+		"jwt-decode": "^2.1.0",
+		"lightgallery.js": "^1.0.1",
+		"localforage": "^1.4.3",
+		"lodash": "^4.17.2",
+		"logrocket": "^0.2.1",
+		"mathjs": "^3.10.0",
+		"mobile-detect": "^1.3.3",
+		"moment": "^2.15.2",
+		"moment-range": "^3.0.3",
+		"mongoose": "^4.7.6",
+		"ng-redux": "^3.4.0-beta.1",
+		"ngclipboard": "^1.1.1",
+		"node-schedule": "^1.2.1",
+		"nodemailer": "^3.1.4",
+		"nodemailer-mailgun-transport": "^1.2.2",
+		"nvd3": "^1.8.4",
+		"optics-agent": "^1.1.2",
+		"papaparse": "^4.3.3",
+		"passport": "^0.3.2",
+		"passport-local": "^1.0.0",
+		"perfect-scrollbar": "^0.6.13",
+		"python-shell": "^0.4.0",
+		"redux": "^3.6.0",
+		"redux-persist": "^4.0.0-alpha7",
+		"redux-thunk": "^2.1.0",
+		"request-promise": "^4.1.1",
+		"serve-favicon": "^2.3.2",
+		"showdown": "^1.5.3",
+		"sortablejs": "^1.5.0-rc1",
+		"textangular": "^1.5.12",
+		"winston": "^2.3.0",
+		"winston-daily-rotate-file": "^1.4.0"
+	},
+	"devDependencies": {
+		"babel-cli": "^6.23.0",
+		"babel-core": "^6.17.0",
+		"babel-loader": "^6.2.5",
+		"babel-plugin-angularjs-annotate": "^0.7.0",
+		"babel-plugin-inline-import": "^2.0.4",
+		"babel-preset-es2015": "^6.22.0",
+		"babel-watch": "^2.0.6",
+		"browser-sync": "^2.17.5",
+		"casual": "^1.5.6",
+		"concurrently": "^3.1.0",
+		"connect-history-api-fallback": "^1.3.0",
+		"css-loader": "^0.26.1",
+		"del": "^2.0.2",
+		"ejs-compiled-loader": "^1.1.0",
+		"eslint": "^3.10.2",
+		"eslint-plugin-graphql": "^0.6.1",
+		"estraverse": "^4.1.1",
+		"extract-text-webpack-plugin": "^2.1.0",
+		"favicons-webpack-plugin": "^0.0.7",
+		"file-loader": "^0.10.1",
+		"fmt-obj": "^1.3.0",
+		"graphql-document-collector": "^0.1.1",
+		"graphql-tag": "^2.4.2",
+		"html-loader": "^0.4.5",
+		"html-minify-loader": "^1.1.0",
+		"html-webpack-plugin": "^2.28.0",
+		"http-proxy-middleware": "^0.17.3",
+		"json-loader": "^0.5.4",
+		"node-sass": "^4.5.0",
+		"nodemon": "^1.11.0",
+		"proxy-middleware": "^0.15.0",
+		"react-apollo": "^0.13.1",
+		"run-sequence": "^1.2.2",
+		"sass-loader": "^6.0.2",
+		"style-loader": "^0.13.2",
+		"to-markdown": "^3.0.4",
+		"url": "^0.11.0",
+		"url-loader": "^0.5.7",
+		"webpack": "^2.2.1",
+		"webpack-dev-middleware": "^1.10.1",
+		"webpack-dev-server": "^2.4.1",
+		"webpack-hot-middleware": "^2.17.1",
+		"webpack-visualizer-plugin": "^0.1.11"
+	},
+	"engines": {
+		"node": ">=0.10.0"
+	}
 }
