Initial working electron setup

--- a/package.json
+++ b/package.json
@@ -1,23 +1,31 @@
 {
-  "name": "ques",
-  "version": "0.3.4",
+  "name": "MND-Patient-Dashboard",
+  "productName": "MND Patient Dashboard",
+  "author": "Stefan Mitrasinovic",
+  "version": "0.1.0",
   "private": true,
-  "description": "Learning platform for pre-clinical students",
-  "main": "app.js",
+  "description": "Dashboard for MND patients",
+  "main": "main.js",
   "scripts": {
-    "start": "concurrently \"npm run backend\" \"npm run webpack\"",
+    "start": "electron .",
     "schema": "get-graphql-schema http://localhost:8080/graphql > schema.json",
     "backend": "npm run build-backend && node distServer/",
     "backend:watch": "BABEL_DISABLE_CACHE=1 BABEL_ENV=server NODE_ENV=development babel-watch --watch server/ server/index.js",
     "webpack": "BABEL_ENV=development NODE_ENV=development webpack-dev-server --open --hot",
-    "webpack:dev": "BABEL_ENV=development NODE_ENV=development webpack --display-modules --progress",
+    "webpack:dev": "BABEL_DISABLE_CACHE=1 BABEL_ENV=development NODE_ENV=development webpack --display-modules --progress",
     "webpack:prod": "BABEL_ENV=development NODE_ENV=production webpack --display-modules --progress",
     "webpack:stats": "webpack --json > stats.json",
     "build": "npm run webpack:prod && npm run copy-files",
     "build-backend": "BABEL_ENV=server babel server -d distServer",
     "copy-files": "cp -R src/assets dist",
     "heroku-prebuild": "mkdir distServer && rm -r distServer",
-    "heroku-postbuild": "npm run build && npm run build-backend"
+    "heroku-postbuild": "npm run build && npm run build-backend",
+	"package": "build",
+	"postinstall": "electron-builder install-app-deps"
+  },
+  "build": {
+	"appId": "com.sysmed.MNDDashboard",
+	"files": ["main.js", "dist${/*}", "!(src|logs|server|distServer)${/*}"]
   },
   "repository": {
     "type": "git",
@@ -139,20 +147,24 @@
     "css-loader": "^0.26.1",
     "del": "^2.0.2",
     "ejs-compiled-loader": "^1.1.0",
+    "electron": "^1.6.11",
+    "electron-builder": "^19.16.0",
+    "electron-rebuild": "^1.5.11",
     "eslint": "^3.10.2",
     "eslint-plugin-graphql": "^0.6.1",
     "estraverse": "^4.1.1",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "favicons-webpack-plugin": "^0.0.7",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "favicons-webpack-plugin": "0.0.7",
     "file-loader": "^0.10.1",
     "fmt-obj": "^1.3.0",
     "graphql-document-collector": "^0.1.1",
     "graphql-tag": "^2.4.2",
     "html-loader": "^0.4.5",
     "html-minify-loader": "^1.1.0",
-    "html-webpack-plugin": "^2.28.0",
+    "html-webpack-plugin": "^2.29.0",
     "http-proxy-middleware": "^0.17.3",
     "json-loader": "^0.5.4",
+    "node-gyp": "^3.6.2",
     "node-sass": "^4.5.0",
     "nodemon": "^1.11.0",
     "proxy-middleware": "^0.15.0",
@@ -163,10 +175,10 @@
     "to-markdown": "^3.0.4",
     "url": "^0.11.0",
     "url-loader": "^0.5.7",
-    "webpack": "^2.2.1",
-    "webpack-dev-middleware": "^1.10.1",
-    "webpack-dev-server": "^2.4.1",
-    "webpack-hot-middleware": "^2.17.1",
+    "webpack": "^3.3.0",
+    "webpack-dev-middleware": "^1.11.0",
+    "webpack-dev-server": "^2.5.1",
+    "webpack-hot-middleware": "^2.18.2",
     "webpack-visualizer-plugin": "^0.1.11"
   },
   "engines": {
