Clean up unused npm packages

--- a/package.json
+++ b/package.json
@@ -8,9 +8,6 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "schema": "get-graphql-schema http://localhost:8080/graphql > schema.json",
-    "backend": "npm run build-backend && node distServer/",
-    "backend:watch": "BABEL_DISABLE_CACHE=1 BABEL_ENV=server NODE_ENV=development babel-watch --watch server/ server/index.js",
     "webpack": "BABEL_ENV=development NODE_ENV=development webpack-dev-server --open --hot",
     "webpack:dev": "BABEL_DISABLE_CACHE=1 BABEL_ENV=development NODE_ENV=development webpack --display-modules --progress",
     "webpack:prod": "BABEL_ENV=development NODE_ENV=production webpack --display-modules --progress",
@@ -18,8 +15,6 @@
     "build": "npm run webpack:prod && npm run copy-files",
     "build-backend": "BABEL_ENV=server babel server -d distServer",
     "copy-files": "cp -R src/assets dist",
-    "heroku-prebuild": "mkdir distServer && rm -r distServer",
-    "heroku-postbuild": "npm run build && npm run build-backend",
     "package": "build",
     "postinstall": "electron-builder install-app-deps"
   },
@@ -49,8 +44,6 @@
   },
   "homepage": "https://github.com/Darkbladecr/ques#readme",
   "dependencies": {
-    "@flowjs/flow.js": "^2.11.2",
-    "@flowjs/ng-flow": "^2.7.1",
     "angular": "^1.6.2",
     "angular-animate": "^1.6.2",
     "angular-aria": "^1.6.2",
@@ -79,14 +72,11 @@
     "angular-ui-sortable": "^0.16.1",
     "angular-ui-tree": "^2.22.1",
     "angular-xeditable": "^0.6.0",
-    "angular1-apollo": "^0.2.1",
     "angulartics": "^1.4.0",
     "angulartics-google-analytics": "^0.4.0",
     "animate.css": "^3.5.2",
-    "apollo-client": "^1.0.1",
     "body-parser": "^1.15.2",
     "c3-angular": "^1.3.1",
-    "camo": "^0.12.3",
     "chartist": "^0.10.1",
     "clipboard": "^1.5.16",
     "compression": "^1.6.2",
@@ -94,16 +84,9 @@
     "d3": "3.5.17",
     "datatables-responsive": "^1.0.7",
     "ejs": "^2.5.5",
-    "email-templates": "^2.5.4",
-    "express": "^4.14.0",
-    "express-jwt": "^5.1.0",
     "font-awesome": "^4.7.0",
-    "graphql": "^0.9.1",
-    "graphql-server-express": "^0.6.0",
-    "graphql-tools": "^0.10.0",
     "highlightjs": "^9.8.0",
     "imagesloaded": "^4.1.1",
-    "jade": "^1.11.0",
     "jquery": "^3.1.1",
     "jquery-ui-touch-punch": "^0.2.3",
     "jsonwebtoken": "^7.1.9",
@@ -115,35 +98,21 @@
     "linvodb3": "^3.25.0",
     "localforage": "^1.4.3",
     "lodash": "^4.17.2",
-    "logrocket": "^0.2.1",
     "mathjs": "^3.10.0",
     "medeadown": "^1.1.8",
     "mobile-detect": "^1.3.3",
     "moment": "^2.15.2",
     "moment-range": "^3.0.3",
-    "nedb": "^1.8.0",
-    "ng-redux": "^3.4.0-beta.1",
     "ngclipboard": "^1.1.1",
-    "node-schedule": "^1.2.1",
-    "nodemailer": "^3.1.4",
-    "nodemailer-mailgun-transport": "^1.2.2",
     "nvd3": "^1.8.4",
-    "optics-agent": "^1.1.2",
     "papaparse": "^4.3.3",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "perfect-scrollbar": "^0.6.13",
-    "python-shell": "^0.4.0",
-    "redux": "^3.6.0",
-    "redux-persist": "^4.0.0-alpha7",
-    "redux-thunk": "^2.1.0",
     "request-promise": "^4.1.1",
-    "serve-favicon": "^2.3.2",
     "showdown": "^1.5.3",
     "sortablejs": "^1.5.0-rc1",
-    "textangular": "^1.5.12",
-    "winston": "^2.3.0",
-    "winston-daily-rotate-file": "^1.4.0"
+    "textangular": "^1.5.12"
   },
   "devDependencies": {
     "babel-cli": "^6.23.0",
@@ -167,6 +136,7 @@
     "eslint": "^3.10.2",
     "eslint-plugin-graphql": "^0.6.1",
     "estraverse": "^4.1.1",
+    "express": "^4.15.3",
     "extract-text-webpack-plugin": "^3.0.0",
     "favicons-webpack-plugin": "0.0.7",
     "file-loader": "^0.10.1",
@@ -182,7 +152,6 @@
     "node-sass": "^4.5.0",
     "nodemon": "^1.11.0",
     "proxy-middleware": "^0.15.0",
-    "react-apollo": "^0.13.1",
     "run-sequence": "^1.2.2",
     "sass-loader": "^6.0.2",
     "style-loader": "^0.13.2",
