--- a/.babelrc
+++ b/.babelrc
@@ -1,15 +1,11 @@
 {
 	"env": {
 		"server": {
-			"presets": [["es2015"]],
-			"plugins": ["babel-plugin-inline-import"]
+			"presets": [["es2015"]]
 		},
 		"development": {
 			"presets": [["es2015", { "modules": false }]],
-			"plugins": [
-				["angularjs-annotate", { "explicitOnly": true }],
-				"babel-plugin-inline-import"
-			]
+			"plugins": [["angularjs-annotate", { "explicitOnly": true }]]
 		}
 	}
 }
