--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "d3": "3.5.17",
     "datatables-responsive": "^1.0.7",
     "ejs": "^2.5.5",
+    "electron-dl": "^1.9.0",
     "font-awesome": "^4.7.0",
     "highlightjs": "^9.8.0",
     "imagesloaded": "^4.1.1",
@@ -138,13 +139,12 @@
     "estraverse": "^4.1.1",
     "express": "^4.15.3",
     "extract-text-webpack-plugin": "^3.0.0",
-    "favicons-webpack-plugin": "0.0.7",
-    "file-loader": "^0.10.1",
+    "file-loader": "^0.11.2",
     "fmt-obj": "^1.3.0",
     "graphql-document-collector": "^0.1.1",
     "graphql-tag": "^2.4.2",
     "html-loader": "^0.4.5",
-    "html-minify-loader": "^1.1.0",
+    "html-minify-loader": "^1.3.0",
     "html-webpack-plugin": "^2.29.0",
     "http-proxy-middleware": "^0.17.3",
     "json-loader": "^0.5.4",
@@ -153,11 +153,11 @@
     "nodemon": "^1.11.0",
     "proxy-middleware": "^0.15.0",
     "run-sequence": "^1.2.2",
-    "sass-loader": "^6.0.2",
-    "style-loader": "^0.13.2",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
     "to-markdown": "^3.0.4",
     "url": "^0.11.0",
-    "url-loader": "^0.5.7",
+    "url-loader": "^0.5.9",
     "webpack": "^3.3.0",
     "webpack-dev-middleware": "^1.11.0",
     "webpack-dev-server": "^2.5.1",
