Properly hookup backend on main process and add local DB

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "webpack:stats": "webpack --json > stats.json",
     "build": "npm run webpack:prod && npm run copy-files",
     "build-backend": "BABEL_ENV=server babel server -d distServer",
-    "copy-files": "cp -R src/assets dist",
+    "copy-files": "cp -R src/assets build",
     "package": "build",
     "postinstall": "electron-builder install-app-deps"
   },
@@ -30,8 +30,8 @@
     },
     "files": [
       "main.js",
-      "dist${/*}",
-      "!(src|logs|server|distServer)${/*}"
+      "build${/*}",
+      "!(src|logs|server|distServer|dist)${/*}"
     ]
   },
   "repository": {
@@ -78,13 +78,11 @@
     "body-parser": "^1.15.2",
     "c3-angular": "^1.3.1",
     "chartist": "^0.10.1",
-    "clipboard": "^1.5.16",
     "compression": "^1.6.2",
     "css-element-queries": "^0.4.0",
     "d3": "3.5.17",
     "datatables-responsive": "^1.0.7",
     "ejs": "^2.5.5",
-    "electron-dl": "^1.9.0",
     "font-awesome": "^4.7.0",
     "highlightjs": "^9.8.0",
     "imagesloaded": "^4.1.1",
@@ -93,25 +91,19 @@
     "jsonwebtoken": "^7.1.9",
     "jsplumb": "^2.2.4",
     "jwt-decode": "^2.1.0",
-    "level-js": "^2.2.4",
     "leveldown": "^1.7.2",
-    "lightgallery.js": "^1.0.1",
     "linvodb3": "^3.25.0",
-    "localforage": "^1.4.3",
     "lodash": "^4.17.2",
-    "mathjs": "^3.10.0",
     "medeadown": "^1.1.8",
     "mobile-detect": "^1.3.3",
     "moment": "^2.15.2",
     "moment-range": "^3.0.3",
-    "ngclipboard": "^1.1.1",
     "nvd3": "^1.8.4",
     "papaparse": "^4.3.3",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "perfect-scrollbar": "^0.6.13",
     "request-promise": "^4.1.1",
-    "showdown": "^1.5.3",
     "sortablejs": "^1.5.0-rc1",
     "textangular": "^1.5.12"
   },
